tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/instanceip/localhost_IP_with_empty_sidecar/_test_context/Sidecar.91482494.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar
  namespace: echo-2-20468
spec:
  egress:
  - hosts:
    - ./*
  ingress:
  - defaultEndpoint: :18084
    port:
      number: 18084
      protocol: HTTP
  workloadSelector:
    labels:
      app: b
